--- a/Develop/style.css
+++ b/Develop/style.css
@@ -1,3 +1,9 @@
+:root {
+  --buttonPrimaryColor: rgb(128, 0, 128);
+  --buttonPrimaryClick: rgb(110, 0, 110);
+  --buttonPrimaryHover: rgb(156, 0, 156);
+}
+
 *,
 *::before,
 *::after {
@@ -115,7 +121,66 @@ button[disabled] {
   border: 2px dashed #c0c7cf;
   border-radius: 6px;
   resize: none;
-  overflow: hidden;
+  overflow: hidden scroll;
+}
+
+.popupContainer {
+  opacity: 0;
+  display: none;
+  position: absolute;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(0 0 0 / 25%);
+  align-items: center;
+  justify-content: center;
+}
+.popup {
+  background-color: white;
+  box-shadow: 10px 10px 4px rgb(0 0 0 / 25%);
+  border-radius: 16px;
+  border: 30px solid rgb(0 0 0 / 0%);
+  padding: 0 150px;
+  text-align: center;
+}
+.popup ul li {
+  margin: 5px;
+  text-align: justify;
+}
+.popup button {
+  background-color: var(--buttonPrimaryColor);
+  height: 30px;
+  color: white;
+  font-weight: bolder;
+  border: none;
+  border-radius: 6px;
+  width: fit-content;
+  min-width: 100px;
+  box-shadow: 3px 3px 3px rgb(0 0 0 / 45%);
+}
+
+.popup button:hover {
+  background-color: var(--buttonPrimaryHover);
+}
+
+.popup button:active {
+  background-color: var(--buttonPrimaryClick);
+}
+
+.popupAction {
+  margin-top: 5px;
+  display: flex;
+  justify-content: space-evenly;
+}
+.popupHeader {
+  text-align: center;
+  font-size: x-large;
+  font-weight: bold;
+}
+.notice {
+  color: red;
+  background-color: white;
+  padding: 3px;
 }
 
 @media (max-width: 690px) {
